code/TypeSafety/Lilliput/output/lilliput_rs.txt
$ rustc lilliput.rs -o bin/lilliput_rs
error[E0308]: mismatched types
 --> lilliput.rs:3:13
  |
3 |     let p = &arr as *const i32;
  |             ^^^^^^^^^^^^^^^^^^ expected i16, found i32

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.